Define dependencies in requirements.txt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "exubi"
-dynamic = ["version"]
+dynamic = ["version", "dependencies"]
 authors = [{name = "exubi Developers"}]
 description = "Eliashberg eXtraction Using Bayesian Inference"
 readme = "README.md"
@@ -12,12 +12,10 @@ urls = {Homepage = "https://github.com/TeetotalingTom/exubi"}
 classifiers = [
     "Programming Language :: Python3",
 ]
-dependencies = [
-    "igor2",
-    "jupyterlab",
-    "jupytext",
-]
 
 [tool.setuptools]
-dynamic = {version = {attr = "exubi.__version__"}}
 packages = ["exubi"]
+
+[tool.setuptools.dynamic]
+version = {attr = "exubi.__version__"}
+dependencies = {file = ["requirements.txt"]}
