--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Programming Language :: Python :: 3",
 ]
+requires-python = ">=3.5"
 dependencies = [
     "igor2",
     "jupyterlab",
