--- a/.gitignore
+++ b/.gitignore
@@ -162,16 +162,16 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# --- Ignore all PNG and specific SVG figures ---
+
+# --- Ignore all PNG and specific SVG figures globally ---
 *.png
 *_small.svg
 
-# --- But DO NOT ignore figures inside /doc ---
-!doc/logo/*.png
+# --- But DO NOT ignore Sphinx static assets (used by docs) ---
 !doc/_static/**
 
 # VS Code
 .vscode/
 
-#Ignore Rmd2py.py script in examples folder
+# Ignore Rmd2py.py script in examples folder
 examples/Rmd2py.py
