--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,6 @@ cython_debug/
 # VS Code
 .vscode/
 
-# Ignore Rmd2py.py script in examples folder
+# Ignore conversion scripts if placed in examples folder
 examples/Rmd2py.py
+examples/Rmd2ipynb.py
